Fix Facebook box overflow. Fixes #476.

--- a/wwwbase/css/responsive.css
+++ b/wwwbase/css/responsive.css
@@ -122,6 +122,10 @@
   padding-top: 1rem;
 }
 
+.fbBottom {
+  overflow-x: hidden;
+}
+
 /********************* Definitions *********************/
 
 /* 
